--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "angular2-hmr": "^0.5.5",
     "bootstrap": "^3.3.6",
     "core-js": "^2.2.1",
-    "jquery": "^2.2.3",
+    "jquery": "^3.5.0",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
+    "@types/angular2": "0.0.2",
+    "@types/jasmine": "^3.5.10",
+    "@types/node": "^13.13.4",
     "angular-cli": "0.0.*",
     "autoprefixer": "^6.3.2",
     "copy-webpack-plugin": "^1.1.1",
@@ -48,7 +51,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "^4.14.0",
     "null-loader": "git+https://github.com/webpack/null-loader.git",
     "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.8.0",
@@ -60,7 +63,7 @@
     "ts-loader": "^0.8.1",
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
-    "typedoc": "^0.3.12",
+    "typedoc": "^0.17.6",
     "typescript": "^1.8.0",
     "typings": "^0.6.8",
     "url-loader": "^0.5.6",
