--- a/package.json
+++ b/package.json
@@ -20,54 +20,56 @@
     "start": "npm run server"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "^2.0.0-beta.21",
     "angular2-hmr": "^0.5.5",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^3.3.5",
     "core-js": "^2.2.1",
     "jquery": "^3.5.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "rxjs": "5.0.0-beta.2",
+    "to-string-loader": "^1.1.6",
+    "ts-lint": "^4.5.1",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
+    "@angular/cli": "^9.1.4",
     "@types/angular2": "0.0.2",
     "@types/jasmine": "^3.5.10",
     "@types/node": "^13.13.4",
-    "angular-cli": "0.0.*",
     "autoprefixer": "^6.3.2",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "html-loader": "^0.4.0",
-    "html-webpack-plugin": "^2.8.1",
+    "html-webpack-plugin": "^4.3.0",
     "istanbul-instrumenter-loader": "^0.1.3",
-    "jasmine-core": "^2.3.4",
-    "jasmine-spec-reporter": "^2.4.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
     "json-loader": "^0.5.3",
-    "karma": "0.13.19",
+    "karma": "^5.0.4",
     "karma-chrome-launcher": "^0.2.1",
     "karma-coverage": "^0.5.2",
-    "karma-jasmine": "^0.3.7",
+    "karma-jasmine": "^3.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.7.0",
+    "karma-webpack": "^4.0.2",
     "node-sass": "^4.14.0",
     "null-loader": "git+https://github.com/webpack/null-loader.git",
     "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.8.0",
-    "protractor": "^3.1.1",
+    "protractor": "^6.0.0",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.1",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.1",
-    "tslint": "^3.4.0",
-    "tslint-loader": "^2.1.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.2",
+    "tslint": "^6.1.2",
+    "tslint-loader": "^3.5.4",
     "typedoc": "^0.17.6",
-    "typescript": "^1.8.0",
-    "typings": "^0.6.8",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "typescript": "^3.8.3",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
